--- a/software.html
+++ b/software.html
@@ -480,55 +480,6 @@
                                 </div>
 
                             </div>
-
-                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
-
-                                <div class="sidebar__title">
-                                    <h5>All Services:</h5>
-                                </div>
-                                <div class="sidebar__list">
-                                    <ul>
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Strategic Planning
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Market Entry Strategy
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Business Process optimization
-
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Financial Restructuring
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Cost Reduction Analysis
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Supply Chain Optimization
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                            </div> -->
-
                             <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
 
                                 <div class="sidebar__title">
@@ -690,9 +641,211 @@
                                     tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
                                     pulvinar.</p>
                             </div>
-                            <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
+
+                            <!-- <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                                 <a class="default__button" href="#">GET A FREE QUOTE</a>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row g-4 horizontal-card">
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Custom Web Development</h5>
+                                        <p class="card-text">Digital Minds specializes in custom
+                                            WordPress
+                                            web development, enhancing your brand and creating a web
+                                            presence that aligns perfectly with your business goals.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
+                                        <p class="card-text">Our knowledgeable team excels in
+                                            creating impactful frontend designs and dynamic,
+                                            efficient backend solutions that ensure scalability and
+                                            robust performance.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">CMS Development</h5>
+                                        <p class="card-text">By adopting web content management
+                                            systems such as WordPress, Joomla, Drupal, and others,
+                                            website content can be updated by persons without any
+                                            technical knowledge of website design.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">E-Commerce Development
+                                        </h5>
+                                        <p class="card-text">Make your visitors into customers with
+                                            our comprehensive e-commerce features, including payment
+                                            PSD templates, stock tracking, and detailed reporting
+                                            tools.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Web Application Development</h5>
+                                        <p class="card-text">Whether you are a small business
+                                            starting or a large enterprise, we create reliable and
+                                            robust web applications for your needs.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">API Integration </h5>
+                                        <p class="card-text">Automate and integrate relevant
+                                            business applications and CRMs for your website and fast
+                                            payment solutions.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Responsive Design</h5>
+                                        <p class="card-text">The mobile-first approach is practiced
+                                            at Minds On to make the site look and work right on any
+                                            device the client is using.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Website Maintenance</h5>
+                                        <p class="card-text">Another critical factor of success in
+                                            e-business is having a professional website. Keeping
+                                            your site updated and secure, we provide all maintenance
+                                            and support services for your website.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 p-0">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 p-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title">UI/UX Design</h5>
+                                        <p class="card-text">In UI/UX solutions Minds On
+                                            concentrates on making the design aesthetic and
+                                            functional. Our work involves the creation of designs
+                                            that meet the client’s desires concerning their targeted
+                                            customers besides helping them to meet their targets.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
+                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
+                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                                pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
+                                pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
+                                nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
+                                sagittis aliquam.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
+                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
+                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                                pulvinar.</p>
+                        </div>
+
+                        <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
+                            <a class="default__button" href="#">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
