--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -718,7 +718,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/coding.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -735,7 +735,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/CMS.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -753,7 +753,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/ecommerce.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -772,7 +772,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/APP Development.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -789,7 +789,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/API.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -806,7 +806,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/responsive.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -824,7 +824,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/maintance.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
@@ -842,7 +842,7 @@
                                             <div class="card mb-3">
                                                 <div class="row g-0">
                                                     <div class="col-md-4 p-0">
-                                                        <img src="assets/img/service/33.jpg"
+                                                        <img src="assets/img/web image/ui.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8 p-0">
