--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -699,123 +699,123 @@
                                         <div class="row g-4 horizontal-card">
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/service/33.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Custom Web Development</h5>
-                                                            <p class="card-text">Digital Minds specializes in custom
+                                                            <span class="card-text">Digital Minds specializes in custom
                                                                 WordPress
                                                                 web development, enhancing your brand and creating a web
                                                                 presence that aligns perfectly with your business goals.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/coding.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Frontend/Backend Solutions</h5>
-                                                            <p class="card-text">Our knowledgeable team excels in
+                                                            <span class="card-text">Our knowledgeable team excels in
                                                                 creating impactful frontend designs and dynamic,
                                                                 efficient backend solutions that ensure scalability and
-                                                                robust performance.</p>
+                                                                robust performance.</span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/CMS.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">CMS Development</h5>
-                                                            <p class="card-text">By adopting web content management
+                                                            <span class="card-text">By adopting web content management
                                                                 systems such as WordPress, Joomla, Drupal, and others,
                                                                 website content can be updated by persons without any
                                                                 technical knowledge of website design.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/ecommerce.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">E-Commerce Development
                                                             </h5>
-                                                            <p class="card-text">Make your visitors into customers with
+                                                            <span class="card-text">Make your visitors into customers with
                                                                 our comprehensive e-commerce features, including payment
                                                                 PSD templates, stock tracking, and detailed reporting
                                                                 tools.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/APP Development.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Web Application Development</h5>
-                                                            <p class="card-text">Whether you are a small business
+                                                            <span class="card-text">Whether you are a small business
                                                                 starting or a large enterprise, we create reliable and
                                                                 robust web applications for your needs.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/API.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">API Integration </h5>
-                                                            <p class="card-text">Automate and integrate relevant
+                                                            <span class="card-text">Automate and integrate relevant
                                                                 business applications and CRMs for your website and fast
                                                                 payment solutions.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/responsive.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Responsive Design</h5>
-                                                            <p class="card-text">The mobile-first approach is practiced
+                                                            <span class="card-text">The mobile-first approach is practiced
                                                                 at Minds On to make the site look and work right on any
                                                                 device the client is using.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -823,37 +823,37 @@
 
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/maintance.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Website Maintenance</h5>
-                                                            <p class="card-text">Another critical factor of success in
+                                                            <span class="card-text">Another critical factor of success in
                                                                 e-business is having a professional website. Keeping
                                                                 your site updated and secure, we provide all maintenance
                                                                 and support services for your website.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4 p-0">
+                                                    <div class="col-md-4" style="padding-left: 0px;">
                                                         <img src="assets/img/web image/ui.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
-                                                    <div class="col-md-8 p-0">
+                                                    <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">UI/UX Design</h5>
-                                                            <p class="card-text">In UI/UX solutions Minds On
+                                                            <span class="card-text">In UI/UX solutions Minds On
                                                                 concentrates on making the design aesthetic and
                                                                 functional. Our work involves the creation of designs
                                                                 that meet the client’s desires concerning their targeted
                                                                 customers besides helping them to meet their targets.
-                                                            </p>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
