--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/wb.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -552,7 +552,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/soft.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -569,7 +569,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/game.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -585,7 +585,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/app.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -602,7 +602,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/seo.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -619,7 +619,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/ui.png" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -636,7 +636,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/it.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -653,7 +653,7 @@
                             <div class="card mb-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                        <img src="assets/img/services-home/Content.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
